src/rendering/opengl/gl_rho.h

	typedef unsigned int GLenum;

	typedef unsigned int GLbitfield;

	typedef void GLvoid;

	typedef int GLint;

	typedef unsigned int GLuint;

	typedef int GLsizei;

	typedef float GLfloat;

	typedef double GLdouble;

		typedef ptrdiff_t GLsizeiptr;

		typedef uint64_t GLuint64;

		typedef struct __GLsync *GLsync;

extern void (CODEGEN_FUNCPTR *_ptrc_glBlendFunc)(GLenum, GLenum);

#define glBlendFunc _ptrc_glBlendFunc
extern void (CODEGEN_FUNCPTR *_ptrc_glClear)(GLbitfield);

#define glClear _ptrc_glClear
extern void (CODEGEN_FUNCPTR *_ptrc_glClearColor)(GLfloat, GLfloat, GLfloat, GLfloat);

#define glClearColor _ptrc_glClearColor
extern void (CODEGEN_FUNCPTR *_ptrc_glClearDepth)(GLdouble);
extern void (CODEGEN_FUNCPTR *_ptrc_glDepthFunc)(GLenum);
extern void (CODEGEN_FUNCPTR *_ptrc_glDisable)(GLenum);

#define glDisable _ptrc_glDisable
extern GLenum (CODEGEN_FUNCPTR *_ptrc_glGetError)();

extern void (CODEGEN_FUNCPTR *_ptrc_glBindTexture)(GLenum, GLuint);

#define glBindTexture _ptrc_glBindTexture
extern void (CODEGEN_FUNCPTR *_ptrc_glDrawArrays)(GLenum, GLint, GLsizei);

#define glDrawArrays _ptrc_glDrawArrays
extern void (CODEGEN_FUNCPTR *_ptrc_glBindBuffer)(GLenum, GLuint);

#define glBindBuffer _ptrc_glBindBuffer
extern void (CODEGEN_FUNCPTR *_ptrc_glBufferData)(GLenum, GLsizeiptr, const GLvoid *, GLenum);

#define glBufferData _ptrc_glBufferData

extern void (CODEGEN_FUNCPTR *_ptrc_glAttachShader)(GLuint, GLuint);

#define glAttachShader _ptrc_glAttachShader
extern void (CODEGEN_FUNCPTR *_ptrc_glCompileShader)(GLuint);

#define glCompileShader _ptrc_glCompileShader
extern GLuint (CODEGEN_FUNCPTR *_ptrc_glCreateProgram)();

#define glCreateProgram _ptrc_glCreateProgram
extern GLuint (CODEGEN_FUNCPTR *_ptrc_glCreateShader)(GLenum);

#define glCreateShader _ptrc_glCreateShader
extern void (CODEGEN_FUNCPTR *_ptrc_glDeleteShader)(GLuint);

#define glDeleteShader _ptrc_glDeleteShader
extern void (CODEGEN_FUNCPTR *_ptrc_glDisableVertexAttribArray)(GLuint);

#define glDisableVertexAttribArray _ptrc_glDisableVertexAttribArray
extern void (CODEGEN_FUNCPTR *_ptrc_glBindVertexArray)(GLuint);

#define glBindVertexArray _ptrc_glBindVertexArray
extern GLenum (CODEGEN_FUNCPTR *_ptrc_glCheckFramebufferStatus)(GLenum);

extern GLenum (CODEGEN_FUNCPTR *_ptrc_glClientWaitSync)(GLsync, GLbitfield, GLuint64);