src/rendering/opengl/gl.adb

with Ada.Text_IO;
with Ada.Float_Text_IO;

with GL.Debug;

package body GL is

   Debug_Active : Boolean := False;

   -------------------
   -- Attach_Shader --
   -------------------

   procedure Attach_Shader
     (Program : Uint;
      Shader  : Uint)
   is
      type Lib_glAttachShader is access
        procedure
          (Program : Uint;
           Shader  : Uint);
      pragma Convention (C, Lib_glAttachShader);
      glAttachShader : Lib_glAttachShader;
      pragma Import (C, glAttachShader,
                     "_ptrc_glAttachShader");
   begin
      glAttachShader
        (Program,
         Shader);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Attach_Shader;

   -----------------
   -- Bind_Buffer --
   -----------------

   procedure Bind_Buffer
     (Target : GLenum;
      Buffer : Uint)
   is
      type Lib_glBindBuffer is access
        procedure
          (Target : GLenum;
           Buffer : Uint);
      pragma Convention (C, Lib_glBindBuffer);
      glBindBuffer : Lib_glBindBuffer;
      pragma Import (C, glBindBuffer,
                     "_ptrc_glBindBuffer");
   begin
      if Debug_Active then
         Ada.Text_IO.Put_Line
           ("glBindBuffer: " & GL.Debug.Image (Target) & Buffer'Img);
      end if;

      glBindBuffer
        (Target,
         Buffer);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Bind_Buffer;

   ------------------
   -- Bind_Texture --
   ------------------

   procedure Bind_Texture
     (Target  : GLenum;
      Texture : Uint)
   is
      type Lib_glBindTexture is access
        procedure
          (Target  : GLenum;
           Texture : Uint);
      pragma Convention (C, Lib_glBindTexture);
      glBindTexture : Lib_glBindTexture;
      pragma Import (C, glBindTexture,
                     "_ptrc_glBindTexture");
   begin
      if Debug_Active then
         Ada.Text_IO.Put_Line
           ("glBindTexture: " & Debug.Image (Target) & Texture'Img);
      end if;

      glBindTexture
        (Target,
         Texture);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Bind_Texture;

   -----------------------
   -- Bind_Vertex_Array --
   -----------------------

   procedure Bind_Vertex_Array
     (Array_Id : Uint)
   is
      type Lib_glBindVertexArray is access
        procedure
          (Array_Id : Uint);
      pragma Convention (C, Lib_glBindVertexArray);
      glBindVertexArray : Lib_glBindVertexArray;
      pragma Import (C, glBindVertexArray,
                     "_ptrc_glBindVertexArray");
   begin
      if Debug_Active then
         Ada.Text_IO.Put_Line
           ("glBindVertexArray: " & Array_Id'Img);
      end if;

      glBindVertexArray
        (Array_Id);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Bind_Vertex_Array;

   ----------------
   -- Blend_Func --
   ----------------

   procedure Blend_Func
     (Sfactor : GLenum;
      Dfactor : GLenum)
   is
      type Lib_glBlendFunc is access
        procedure
          (Sfactor : GLenum;
           Dfactor : GLenum);
      pragma Convention (C, Lib_glBlendFunc);
      glBlendFunc : Lib_glBlendFunc;
      pragma Import (C, glBlendFunc,
                     "_ptrc_glBlendFunc");
   begin
      glBlendFunc
        (Sfactor,
         Dfactor);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Blend_Func;

   -----------------
   -- Buffer_Data --
   -----------------

   procedure Buffer_Data
     (Target : GLenum;
      Size   : Sizeiptr;
      Data   : System.Address;
      Usage  : GLenum)
   is
      type Lib_glBufferData is access
        procedure
          (Target : GLenum;
           Size   : Sizeiptr;
           Data   : System.Address;
           Usage  : GLenum);
      pragma Convention (C, Lib_glBufferData);
      glBufferData : Lib_glBufferData;
      pragma Import (C, glBufferData,
                     "_ptrc_glBufferData");
   begin
      if Debug_Active then
         Ada.Text_IO.Put_Line
           ("glBufferData: "
            & GL.Debug.Image (Target)
            & Size'Img
            & " " & GL.Debug.Image (Usage));
      end if;
      glBufferData
        (Target,
         Size,
         Data,
         Usage);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Buffer_Data;

   -----------
   -- Clear --
   -----------

   procedure Clear
     (Mask : Bit_Mask)
   is
      type Lib_glClear is access
        procedure
          (Mask : Bit_Mask);
      pragma Convention (C, Lib_glClear);
      glClear : Lib_glClear;
      pragma Import (C, glClear,
                     "_ptrc_glClear");
   begin
      glClear
        (Mask);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Clear;

   -----------------
   -- Clear_Color --
   -----------------

   procedure Clear_Color
     (Red   : GLfloat;
      Green : GLfloat;
      Blue  : GLfloat;
      Alpha : GLfloat)
   is
      type Lib_glClearColor is access
        procedure
          (Red   : GLfloat;
           Green : GLfloat;
           Blue  : GLfloat;
           Alpha : GLfloat);
      pragma Convention (C, Lib_glClearColor);
      glClearColor : Lib_glClearColor;
      pragma Import (C, glClearColor,
                     "_ptrc_glClearColor");
   begin
      glClearColor
        (Red,
         Green,
         Blue,
         Alpha);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Clear_Color;

   -----------------
   -- Clear_Depth --
   -----------------

   procedure Clear_Depth
     (Depth : GLfloat)
   is
      type Lib_GlClearDepth is access
        procedure
          (Depth  : GLfloat);
      pragma Convention (C, Lib_GlClearDepth);
      GlClearDepth : Lib_GlClearDepth;
      pragma Import (C, GlClearDepth,
                     "_ptrc_glClearDepth");
   begin
      GlClearDepth
        (Depth);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Clear_Depth;

   --------------------
   -- Compile_Shader --
   --------------------

   procedure Compile_Shader
     (Shader : Uint)
   is
      type Lib_glCompileShader is access
        procedure
          (Shader : Uint);
      pragma Convention (C, Lib_glCompileShader);
      glCompileShader : Lib_glCompileShader;
      pragma Import (C, glCompileShader,
                     "_ptrc_glCompileShader");
   begin
      glCompileShader
        (Shader);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Compile_Shader;

   --------------------
   -- Create_Program --
   --------------------

   function Create_Program
     return Uint
   is
      type Lib_glCreateProgram is access
        function
          return Uint;
      pragma Convention (C, Lib_glCreateProgram);
      glCreateProgram : Lib_glCreateProgram;
      pragma Import (C, glCreateProgram,
                     "_ptrc_glCreateProgram");
   begin
      return glCreateProgram.all;
   end Create_Program;

   -------------------
   -- Create_Shader --
   -------------------

   function Create_Shader
     (Shader_Type : GLenum)
     return Uint
   is
      type Lib_glCreateShader is access
        function
          (Shader_Type : GLenum)
          return Uint;
      pragma Convention (C, Lib_glCreateShader);
      glCreateShader : Lib_glCreateShader;
      pragma Import (C, glCreateShader,
                     "_ptrc_glCreateShader");
   begin
      if glCreateShader = null then
         raise Constraint_Error with "glCreateShader not found";
      end if;

      return glCreateShader
        (Shader_Type);
   end Create_Shader;

   -------------------
   -- Debug_Enabled --
   -------------------

   function Debug_Enabled return Boolean is
   begin
      return Debug_Active;
   end Debug_Enabled;

   -------------------
   -- Delete_Shader --
   -------------------

   procedure Delete_Shader
     (Shader : Uint)
   is
      type Lib_glDeleteShader is access
        procedure
          (Shader : Uint);
      pragma Convention (C, Lib_glDeleteShader);
      glDeleteShader : Lib_glDeleteShader;
      pragma Import (C, glDeleteShader,
                     "_ptrc_glDeleteShader");
   begin
      glDeleteShader
        (Shader);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Delete_Shader;

   --------------------
   -- Depth_Function --
   --------------------

   procedure Depth_Function
     (Fn : GLenum)
   is
      type Lib_GLDepthFunc is access
        procedure
          (Capability : GLenum);
      pragma Convention (C, Lib_GLDepthFunc);
      GLDepthFunc : Lib_GLDepthFunc;
      pragma Import (C, GLDepthFunc,
                     "_ptrc_glDepthFunc");
   begin
      GLDepthFunc (Fn);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Depth_Function;

   -------------
   -- Disable --
   -------------

   procedure Disable
     (Capability : GLenum)
   is
      type Lib_glDisable is access
        procedure
          (Capability : GLenum);
      pragma Convention (C, Lib_glDisable);
      glDisable : Lib_glDisable;
      pragma Import (C, glDisable,
                     "_ptrc_glDisable");
   begin
      glDisable
        (Capability);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Disable;

   -------------------
   -- Disable_Debug --
   -------------------

   procedure Disable_Debug is
   begin
      Debug_Active := False;
   end Disable_Debug;

   ------------------------------------
   -- Disable_Vertex_Attribute_Array --
   ------------------------------------

   procedure Disable_Vertex_Attribute_Array
     (Index : Uint)
   is
      type Lib_glDisableVertexAttribArray is access
        procedure
          (Index : Uint);
      pragma Convention (C, Lib_glDisableVertexAttribArray);
      glDisableVertexAttribArray : Lib_glDisableVertexAttribArray;
      pragma Import (C, glDisableVertexAttribArray,
                     "_ptrc_glDisableVertexAttribArray");
   begin
      glDisableVertexAttribArray
        (Index);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Disable_Vertex_Attribute_Array;

   -----------------
   -- Draw_Arrays --
   -----------------

   procedure Draw_Arrays
     (Mode  : GLenum;
      First : Int;
      Count : Sizei)
   is
      type Lib_glDrawArrays is access
        procedure
          (Mode  : GLenum;
           First : Int;
           Count : Sizei);
      pragma Convention (C, Lib_glDrawArrays);
      glDrawArrays : Lib_glDrawArrays;
      pragma Import (C, glDrawArrays,
                     "_ptrc_glDrawArrays");
   begin
      if Debug_Active then
         Ada.Text_IO.Put_Line
           ("glDrawArrays: "
            & GL.Debug.Image (Mode)
            & First'Img
            & Count'Img);
      end if;
      glDrawArrays
        (Mode,
         First,
         Count);
      if Get_Error /= 0 then
         raise Program_Error;
      end if;
   end Draw_Arrays;

   ---------------------------
   -- Draw_Arrays_Instanced --
   ---------------------------
